--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.18",
+    "@ai-sdk/openai": "^0.0.20",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.3",
     "@types/mdx": "^2.0.13",
+    "ai": "^3.1.26",
     "gray-matter": "^4.0.3",
     "next": "14.2.3",
     "next-mdx-remote": "^5.0.0",
