--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.2.3",
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
