--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "prepare:data": "tsx -r dotenv/config ./scripts/embed-pinecone-data.ts"
+        "prepare:data": "DOTENV_CONFIG_PATH=.env.local tsx -r dotenv/config ./scripts/embed-pinecone-data.ts"
     },
     "dependencies": {
         "@ai-sdk/google": "^0.0.18",
